# flashboard-tts-proto

./: .gitignore  README.md  config.py  main.py  pyproject.toml  sample.toml  settings.toml
